--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -103,10 +103,10 @@ html {
 
           img {
             height: auto;
-            max-width: 16rem;
+            max-width: 11rem;
 
             @media screen and (max-width:600px) {
-              max-width:12rem;
+              max-width:10rem;
             }
           }
         }
@@ -170,6 +170,7 @@ html {
           letter-spacing: -0.1rem;
           margin-bottom: 1rem;
           color: white;
+          text-shadow:3px 3px 5px rgba(0,0,0,0.5);
           @media screen and (max-width: 600px) {
             font-size: 5rem;
           }
@@ -181,6 +182,7 @@ html {
           font-style: italic;
           max-width: 600px;
           margin-bottom: 2rem;
+          text-shadow:2px 2px 3px black;
         }
 
         @media screen and (max-width: 600px) {
