Rearrange home sections

--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -141,7 +141,7 @@ html {
 
     .professional {
       padding:5rem 0;
-      background:white;
+      background:#eee;
 
       .wrapper {          
         .education, .experience {    
