Add low-cost ensemble paper

--- a/src/assets/styles/research.scss
+++ b/src/assets/styles/research.scss
@@ -75,9 +75,7 @@ html {
       }
     }
 
-    .low-cost-ensembles {
-      background-image: url(/static/cell-nucleus.svg);
-    }
+
     .prune-and-tune-ensembles {
       background-image: url(/static/cell-nucleus.svg);
     }
@@ -91,6 +89,9 @@ html {
       background-image: url(/static/jewel-stone-diamond.svg);
     }
     .stochastic-masking {
+      background-image: url(/static/h2o-water-molecule.svg);
+    }
+    .low-cost-ensembles {
       background-image: url(/static/h2o-water-molecule.svg);
     }
     .quantum-neuron-selection {
