--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -92,8 +92,9 @@ html {
 
       .wrapper {
         display: grid;
-        grid-template-columns: 1fr auto;
+        grid-template-columns: auto auto;
         align-items: center;
+        justify-content: space-between;
         padding:1rem;
 
         .logo {
