--- a/src/assets/styles/notebook.scss
+++ b/src/assets/styles/notebook.scss
@@ -3,7 +3,7 @@ html {
 
   body {
     .hero {
-      background: url(/static/mystic-gate-bg.png);
+      background-image: url(/static/mystic-gate-bg.png);
 
       h1 {
         max-width:850px;
@@ -16,6 +16,9 @@ html {
           iframe {
             width: 100%;
             border:none;
+            .jp-InputPrompt, .jp-OutputPrompt {
+              display:none;
+            }
           }
         }
       }
