--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -6,6 +6,43 @@ html {
       background-position: top center;
     }
 
+    .intro {
+      background: white;
+      padding: 4.8rem 0;
+      .wrapper {
+        .column-wrapper {
+          display: flex;
+          align-items: baseline;
+          justify-content: space-between;
+          padding: 1.6rem;
+          flex-wrap:wrap;
+
+          @media screen and (max-width:600px) {
+            padding:1.6rem 0;
+          }
+
+          .column {
+            flex: 0 0 30%;
+            text-align: center;
+
+            .icon {
+              margin: 0 auto;
+              height: 15rem;
+              width: 15rem;
+
+              img {
+                width: 100%;
+                height: 100%;
+              }
+            }
+            @media screen and (max-width:600px) {
+              flex:0 0 100%;
+            }
+          }
+        }
+      }
+    }
+
     .merch {
       background: white;
       padding: 4.8rem 0;
@@ -120,7 +157,7 @@ html {
       }
     }
 
-    .content {
+    .notebooks {
       display:grid;
       grid-template-rows: auto auto;
       grid-template-columns: 2fr 1fr;
@@ -154,7 +191,7 @@ html {
         grid-row:2;
         border-right:1px solid #ddd;
 
-        .paper {
+        .post {
           background: white;
           padding: 2rem 0;
           margin-right:2rem;
@@ -172,7 +209,7 @@ html {
       }
       .secondary-col {
         grid-row:2;
-        .paper {
+        .post {
           background: white;
           padding: 2rem;
           h1 {
@@ -187,341 +224,14 @@ html {
           }
         }
       }
-
+      @media screen and (max-width:600px) {
+        padding-left:1rem;
+        padding-right:1rem;        
+      }
     }
-
-
-
 
     .prune-and-tune-ensembles {
-      background-image: url(/static/dna-helix-3.svg);
-    }
-    // .interpretable-diversity-analysis {
-    //   background-image: url(/static/cell-nucleus.svg);
-    // }
-    // .sparse-mutation-decomposition {
-    //   background-image: url(/static/jewel-stone-diamond.svg);
-    // }
-    // .synaptic-stripping {
-    //   background-image: url(/static/brain.svg);
-    // }
-    // .stochastic-masking {
-    //   background-image: url(/static/h2o-water-molecule.svg);
-    // }
-    // .low-cost-ensembles {
-    //   background-image: url(/static/hexa-cell-3.svg);
-    // }
-    // .quantum-neuron-selection {
-    //   background-image: url(/static/freezer-ice.svg);
-    // }
-
-    .personal {
-      width: 100%;
-      background-image: url(/static/personal-hero.png);
-      background-size: cover;
-      background-color: white;
-      background-position: top center;
-      background-repeat: no-repeat;
-      position: relative;
-      height: 70vh;
-      filter:grayscale(1);
-
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 0;
-        background: black;
-        opacity: 0.5;
-      }
-
-      .wrapper {
-        position: relative;
-        z-index: 1;
-        top: 50%;
-        transform: translateY(-50%);
-
-        h1 {
-          font-family: "Open Sans";
-          font-size: 6.4rem;
-          text-transform: uppercase;
-          line-height: 1;
-          letter-spacing: -0.1rem;
-          margin-bottom: 1rem;
-          color: white;
-          text-shadow:5px 5px 0px rgba(0,0,0,1);
-          @media screen and (max-width: 600px) {
-            font-size: 5rem;
-          }
-        }
-
-        p {
-          color: white;
-          font-size:1.7rem;
-          font-style: italic;
-          max-width: 600px;
-          margin-bottom: 2rem;
-        }
-
-        @media screen and (max-width: 600px) {
-          text-align:center;
-        }
-      }
-    }
-
-    .professional {
-      padding:5rem 0;
-      background:#eee;
-
-      .wrapper {
-        .education, .experience {
-          .main-header {
-            display:flex;
-            justify-content: space-between;
-            align-items:end;
-            border-bottom:1px solid #666;
-            margin:1rem 0;
-            padding-bottom:1rem;
-  
-            h1 {
-              flex: 0;
-              font-size:5rem;
-              font-family: "Open Sans";
-              text-transform:uppercase;
-            }
-            div {
-              flex:0 auto;
-              img {
-                width:100px;
-                margin-left: 1rem;
-              }
-            }
-          }
-
-          .item {
-            margin-bottom:2rem;
-
-            .header {
-              display:flex;
-              justify-content:space-between;
-            }
-
-            p {
-              margin-bottom:0;
-            }
-
-            ul {
-              padding-left:5rem;
-            }
-          }
-        }
-        .education {margin-bottom:5rem;}
-      }
-    }
-
-    .gallery {
-      background: black;
-      padding: 1rem;
-      width: 100%;
-      display: grid;
-      grid-template-columns: repeat(8, 1fr);
-      grid-template-rows: repeat(6, 5vw);
-      grid-gap: 1rem;
-
-      .item {
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          filter: grayscale(1);
-          -webkit-transition: 0.5s -webkit-filter ease;
-          -moz-transition: 0.5s -moz-filter ease;
-          -moz-transition: 0.5s filter ease;
-          -ms-transition: 0.5s -ms-filter ease;
-          -o-transition: 0.5s -o-filter ease;
-          transition: 0.5s filter ease, 0.5s -webkit-filter ease;
-
-          &:hover {
-            filter: grayscale(0);
-          }
-        }
-
-        // &:nth-child(1) {
-        //   grid-column-start: 1;
-        //   grid-column-end: 3;
-        //   grid-row-start: 1;
-        //   grid-row-end: 4;
-        // }
-        // &:nth-child(2) {
-        //   grid-column-start: 3;
-        //   grid-column-end: 5;
-        //   grid-row-start: 1;
-        //   grid-row-end: 7;
-        // }
-        // &:nth-child(3) {
-        //   grid-column-start: 5;
-        //   grid-column-end: 9;
-        //   grid-row-start: 1;
-        //   grid-row-end: 7;
-        // }
-        // &:nth-child(4) {
-        //   grid-column-start: 1;
-        //   grid-column-end: 3;
-        //   grid-row-start: 4;
-        //   grid-row-end: 10;
-        // }
-        // &:nth-child(5) {
-        //   grid-column-start: 3;
-        //   grid-column-end: 5;
-        //   grid-row-start: 7;
-        //   grid-row-end: 10;
-        // }
-        // &:nth-child(6) {
-        //   grid-column-start: 5;
-        //   grid-column-end: 7;
-        //   grid-row-start: 7;
-        //   grid-row-end: 10;
-        // }
-        // &:nth-child(7) {
-        //   grid-column-start: 7;
-        //   grid-column-end: 9;
-        //   grid-row-start: 7;
-        //   grid-row-end: 10;
-        // }
-
-        &:nth-child(1) {
-          grid-column-start: 1;
-          grid-column-end: 3;
-          grid-row-start: 1;
-          grid-row-end: 4;
-        }
-        &:nth-child(2) {
-          grid-column-start: 1;
-          grid-column-end: 3;
-          grid-row-start: 4;
-          grid-row-end: 7;
-        }
-        &:nth-child(3) {
-          grid-column-start: 3;
-          grid-column-end: 5;
-          grid-row-start: 1;
-          grid-row-end: 7;
-        }
-        &:nth-child(4) {
-          grid-column-start: 5;
-          grid-column-end: 7;
-          grid-row-start: 1;
-          grid-row-end: 4;
-        }
-        &:nth-child(5) {
-          grid-column-start: 5;
-          grid-column-end: 7;
-          grid-row-start: 4;
-          grid-row-end: 7;
-        }
-        &:nth-child(6) {
-          grid-column-start: 7;
-          grid-column-end: 9;
-          grid-row-start: 1;
-          grid-row-end: 7;
-        }
-      }
-    }
-
-    .contact {
-      padding: 8rem 0;
-      background: white;
-      
-      @media screen and (max-width:600px) {
-        padding:0rem;
-      }
-      
-      .wrapper {
-        display: grid;
-        grid-template-rows: auto auto;
-        grid-template-columns: 1fr 1fr;
-        grid-column-gap: 3.2rem;
-
-        @media screen and (max-width:600px) {
-          grid-template-rows: auto auto auto;
-          grid-template-columns: 1fr;
-          grid-column-gap: 0rem;
-          grid-row-gap: 3.2rem;
-        }
-
-        h1 {
-          grid-row: 1;
-          font-size: 3.2rem;
-          margin-bottom: 1.6rem;
-          @media screen and (max-width:600px) {
-            margin-bottom: -1.6rem;
-          }
-        }
-        .form-container {
-          grid-row: 2;
-          display:flex;
-
-          form {
-            display: flex;
-            flex-direction: column;
-            flex:1;
-            
-            input {
-              display: block;
-              margin-bottom: 1.6rem;
-              padding: 0.8rem;
-              outline: none;
-              border: 1px solid #ccc;
-              background: white;
-            }
-            textarea {
-              flex: 1;
-              display: block;
-              padding: 0.8rem;
-              outline: none;
-              border: 1px solid #ccc;
-              background: white;
-            }
-            button {
-              background: #1976d2;
-              color: white;
-              padding: 0.8rem 1.6rem;
-              outline: none;
-              border:none;
-              cursor:pointer;
-              font-family: "Open Sans";
-              font-weight: bold;
-              text-transform: uppercase;
-              font-size: 1.2rem;
-              text-decoration: none;
-              border-radius: 3px;
-              max-width: max-content;
-              display: block;
-              margin-top:1.6rem;
-            }  
-          }
-        }
-        .map-container {
-          grid-row: 2;
-          #map {
-            height: 32rem;
-          }
-          @media screen and (max-width:600px) {
-            grid-row: 3;
-          }
-        }
-
-      }
-    }
-    footer {
-      background:white;
-      
-      .wrapper .column {
-        color:black;
-        h2, p, a {color:black}
-      }
+      background-image: url(/static/tree.svg);
     }
   }
 }
