--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -34,9 +34,15 @@ html {
                 width: 100%;
                 height: 100%;
               }
+
+              @media screen and (max-width:600px) {
+                height:12rem;
+                width:12rem;
+              }
             }
             @media screen and (max-width:600px) {
               flex:0 0 100%;
+              padding:2rem 0;
             }
           }
         }
@@ -95,7 +101,7 @@ html {
       background-repeat: no-repeat;
 
       @media screen and (max-width:600px) {
-        padding:8rem 0;
+        padding:2rem 0;
         background-size:250vw;
       }
       
@@ -116,10 +122,18 @@ html {
           line-height: 1.2;
           margin-bottom: 1.6rem;
           color: black;
+
+          @media screen and (max-width:600px) {
+            font-size:3.8rem;
+          }
         }
         p {
           color: black;
           font-size: 1.8rem;
+
+          @media screen and (max-width:600px) {
+            font-size:1.6rem;
+          }
         }
         .read-more {
           display: inline-block;
@@ -155,6 +169,9 @@ html {
           }
         }
       }
+      @media screen and (max-width:600px) {
+        background-size:0;
+      }
     }
 
     .notebooks {
@@ -185,6 +202,20 @@ html {
               color: #1976d2;
             }
           }
+          @media screen and (max-width:600px) {
+            display:none;
+          }
+        }
+        .mobile-categories {
+          display:none;
+          padding-bottom:2rem;
+
+          @media screen and (max-width:600px) {
+            display:block;
+          } 
+        }
+        @media screen and (max-width:600px) {
+          grid-column:auto;
         }
       }
       .primary-col {
@@ -206,6 +237,11 @@ html {
             border-top: 1px solid #ddd;
           }
         }
+
+        @media screen and (max-width:600px) {
+          grid-row:auto;
+          border-right:none;
+        }
       }
       .secondary-col {
         grid-row:2;
@@ -223,10 +259,15 @@ html {
             border-top: 1px solid #ddd;
           }
         }
+        
+        @media screen and (max-width:600px) {
+          display:none;
+        }
       }
       @media screen and (max-width:600px) {
         padding-left:1rem;
-        padding-right:1rem;        
+        padding-right:1rem;
+        grid-template-columns: 1fr;
       }
     }
 
