--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -154,7 +154,7 @@ html {
         bottom: 0;
         z-index: 0;
         background: black;
-        opacity: 0.5;
+        opacity: 0.7;
       }
 
       .wrapper {
@@ -172,22 +172,23 @@ html {
           margin-bottom: 1rem;
           color: white;
           text-shadow:5px 5px 0px rgba(0,0,0,1);
+
           @media screen and (max-width: 600px) {
-            font-size: 5rem;
+            font-size: 3.8rem;
           }
         }
 
         p {
           color: white;
-          font-size:1.7rem;
+          font-size:1.6rem;
           font-style: italic;
           max-width: 600px;
           margin-bottom: 2rem;
         }
+      }
 
-        @media screen and (max-width: 600px) {
-          text-align:center;
-        }
+      @media screen and (max-width: 600px) {
+        height:55vh;
       }
     }
     .reference {
