--- a/src/assets/styles/cv.scss
+++ b/src/assets/styles/cv.scss
@@ -66,6 +66,9 @@ html {
               @media screen and (max-width:600px) {
                 font-size:2.4rem;
               }
+              @media screen and (max-width:600px) {
+                display:block;
+              }    
             }
             div {
               flex:0 auto;
