--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -107,15 +107,12 @@ html {
             max-width: 11rem;
 
             @media screen and (max-width:600px) {
-              max-width:10rem;
+              max-width:8rem;
             }
           }
         }
 
         nav {
-          @media screen and (max-width: 600px) {
-            font-size:0.8rem;
-          }
           a {
             color: black;
             text-decoration: none;
@@ -126,8 +123,8 @@ html {
             font-size: 1.2rem;
 
             @media screen and (max-width: 600px) {
-              margin-left:1.6rem;
-              font-size:0.8rem;
+              margin-left:1.5rem;
+              font-size:0.9rem;
             }
 
             &.active, &:hover {
@@ -154,7 +151,7 @@ html {
         bottom: 0;
         z-index: 0;
         background: black;
-        opacity: 0.7;
+        opacity: 0.5;
       }
 
       .wrapper {
@@ -184,11 +181,15 @@ html {
           font-style: italic;
           max-width: 600px;
           margin-bottom: 2rem;
+
+          @media screen and (max-width: 600px) {
+            display:none;
+          }
         }
       }
 
       @media screen and (max-width: 600px) {
-        height:55vh;
+        height:35vh;
       }
     }
     .reference {
