--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -4,6 +4,10 @@ html {
     .hero {
       background-image: url(/static/brain-bg.png);
       background-position: top center;
+
+      h1 {
+        max-width:65rem;
+      }
     }
 
     .intro {
