--- a/src/assets/styles/cv.scss
+++ b/src/assets/styles/cv.scss
@@ -9,44 +9,21 @@ html {
 
     .intro {
       background: white;
-      padding: 4.8rem 0;
+      padding: 5rem 0;
       .wrapper {
-        .column-wrapper {
-          display: flex;
-          align-items: baseline;
-          justify-content: space-between;
-          padding: 1.6rem;
-          flex-wrap:wrap;
-
+        h1 {
+          font-family: "Open Sans";
+          text-transform:uppercase;
           @media screen and (max-width:600px) {
-            padding:1.6rem 0;
-          }
-
-          .column {
-            flex: 0 0 30%;
-            text-align: center;
-
-            .icon {
-              margin: 0 auto;
-              height: 15rem;
-              width: 15rem;
-
-              img {
-                width: 100%;
-                height: 100%;
-              }
-            }
-            @media screen and (max-width:600px) {
-              flex:0 0 100%;
-            }
-          }
+            font-size:2.4rem;
+          } 
         }
       }
     }
 
     .professional {
-      padding:5rem 0;
-      background:white;
+      padding:2rem 0 5rem 0;
+      background:#eee;
 
       .wrapper {
         .education, .experience {
@@ -60,15 +37,11 @@ html {
   
             h1 {
               flex: 0;
-              font-size:5rem;
               font-family: "Open Sans";
               text-transform:uppercase;
               @media screen and (max-width:600px) {
                 font-size:2.4rem;
               }
-              @media screen and (max-width:600px) {
-                display:block;
-              }    
             }
             div {
               flex:0 auto;
@@ -218,7 +191,7 @@ html {
 
     .contact {
       padding: 8rem 0;
-      background: #eee;
+      background: white;
       
       @media screen and (max-width:600px) {
         padding:0rem;
