--- a/src/assets/styles/cv.scss
+++ b/src/assets/styles/cv.scss
@@ -2,24 +2,71 @@ html {
 
   body {
     .hero {
-      background-image: url(/static/personal-hero.png);
+      background-image: url(/static/personal-hero-super-res.png);
       background-position: top center;
       filter:grayscale(1);
     }
 
+    // .intro {
+    //   background: white;
+    //   padding: 5rem 0;
+    //   .wrapper {
+    //     h1 {
+    //       font-family: "Open Sans";
+    //       text-transform:uppercase;
+    //       @media screen and (max-width:600px) {
+    //         font-size:2.4rem;
+    //       } 
+    //     }
+    //   }
+    // }
+
     .intro {
       background: white;
-      padding: 5rem 0;
+      padding: 4.8rem 0;
       .wrapper {
-        h1 {
-          font-family: "Open Sans";
-          text-transform:uppercase;
+        .column-wrapper {
+          display: flex;
+          align-items: baseline;
+          justify-content: space-between;
+          padding: 1.6rem;
+          flex-wrap:wrap;
+
+          .column {
+            flex: 0 0 30%;
+            text-align: center;
+
+            .icon {
+              margin: 0 auto;
+              height: 15rem;
+              width: 15rem;
+
+              img {
+                width: 100%;
+                height: 100%;
+              }
+
+              @media screen and (max-width:600px) {
+                height:12rem;
+                width:12rem;
+              }
+            }
+            @media screen and (max-width:600px) {
+              flex:0 0 100%;
+              padding:2rem 0;
+            }
+          }
+
           @media screen and (max-width:600px) {
-            font-size:2.4rem;
-          } 
+            padding:0rem;
+          }
         }
       }
+      @media screen and (max-width:600px) {
+        padding:0rem;
+      }
     }
+
 
     .professional {
       padding:2rem 0 5rem 0;
