--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -9,53 +9,6 @@ html {
         max-width:65rem;
       }
     }
-
-    .intro {
-      background: white;
-      padding: 4.8rem 0;
-      .wrapper {
-        .column-wrapper {
-          display: flex;
-          align-items: baseline;
-          justify-content: space-between;
-          padding: 1.6rem;
-          flex-wrap:wrap;
-
-          .column {
-            flex: 0 0 30%;
-            text-align: center;
-
-            .icon {
-              margin: 0 auto;
-              height: 15rem;
-              width: 15rem;
-
-              img {
-                width: 100%;
-                height: 100%;
-              }
-
-              @media screen and (max-width:600px) {
-                height:12rem;
-                width:12rem;
-              }
-            }
-            @media screen and (max-width:600px) {
-              flex:0 0 100%;
-              padding:2rem 0;
-            }
-          }
-
-          @media screen and (max-width:600px) {
-            padding:0rem;
-          }
-        }
-      }
-      @media screen and (max-width:600px) {
-        padding:0rem;
-      }
-    }
-
     .merch {
       background: white;
       padding: 4.8rem 0;
@@ -280,6 +233,91 @@ html {
 
     .prune-and-tune-ensembles {
       background-image: url(/static/tree.svg);
+    }
+    
+    .contact {
+      padding: 8rem 0;
+      background: white;
+      
+      @media screen and (max-width:600px) {
+        padding:0rem;
+      }
+      
+      .wrapper {
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 3.2rem;
+
+        @media screen and (max-width:600px) {
+          grid-template-rows: auto auto auto;
+          grid-template-columns: 1fr;
+          grid-column-gap: 0rem;
+          grid-row-gap: 3.2rem;
+        }
+
+        h1 {
+          grid-row: 1;
+          font-size: 3.2rem;
+          margin-bottom: 1.6rem;
+          @media screen and (max-width:600px) {
+            margin-bottom: -1.6rem;
+          }
+        }
+        .form-container {
+          grid-row: 2;
+          display:flex;
+
+          form {
+            display: flex;
+            flex-direction: column;
+            flex:1;
+            
+            input {
+              display: block;
+              margin-bottom: 1.6rem;
+              padding: 0.8rem;
+              outline: none;
+              border: 1px solid #ccc;
+              background: white;
+            }
+            textarea {
+              flex: 1;
+              display: block;
+              padding: 0.8rem;
+              outline: none;
+              border: 1px solid #ccc;
+              background: white;
+            }
+            button {
+              background: #1976d2;
+              color: white;
+              padding: 0.8rem 1.6rem;
+              outline: none;
+              border:none;
+              cursor:pointer;
+              font-family: "Open Sans";
+              font-weight: bold;
+              text-transform: uppercase;
+              font-size: 1.2rem;
+              text-decoration: none;
+              border-radius: 3px;
+              max-width: max-content;
+              display: block;
+              margin-top:1.6rem;
+            }  
+          }
+        }
+        .map-container {
+          grid-row: 2;
+          #map {
+            height: 32rem;
+          }
+          @media screen and (max-width:600px) {
+            grid-row: 3;
+          }
+        }
+      }
     }
   }
 }
