--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -231,10 +231,10 @@ html {
       }
     }
 
-    .prune-and-tune-ensembles {
-      background-image: url(/static/tree.svg);
+    .subnetwork-ensembles {
+      background-image: url(/static/tree2.svg);
     }
-    
+
     .contact {
       padding: 8rem 0;
       background: white;
