Add publications to cv

--- a/src/assets/styles/cv.scss
+++ b/src/assets/styles/cv.scss
@@ -73,7 +73,7 @@ html {
       background:#eee;
 
       .wrapper {
-        .education, .experience {
+        .education, .experience, .publications {
           .main-header {
             display:flex;
             justify-content: space-between;
