--- a/src/assets/styles/models.scss
+++ b/src/assets/styles/models.scss
@@ -24,22 +24,41 @@ html {
                 color: red;
               }
             }
-            @media screen and (max-width:600px) {
-              display:none;
-            }
+          }
+          @media screen and (max-width:600px) {
+            display:none;
           }
         }
         .item {
           background: white;
           padding: 5rem 0;
   
-          &:not(:first-child) {
-            border-top: 1px solid #f7f7f7;
+          &:not(:last-child) {
+            border-bottom: 1px solid #f7f7f7;
           }
 
           h1 {
             @media screen and (max-width:600px) {
               font-size:2.4rem;
+            }
+          }
+
+          &.flex {
+            display:flex;
+            flex-wrap:wrap;
+            .content, .image {
+              flex:0 0 50%;
+              
+              img {
+                width:100%;
+              }
+              @media screen and (max-width:600px) {
+                flex:0 0 100%;
+
+                img {
+                  margin-top:3rem;
+                }
+              }
             }
           }
         }
