--- a/src/assets/styles/notebooks.scss
+++ b/src/assets/styles/notebooks.scss
@@ -46,8 +46,8 @@ html {
           font-size: 0.8rem;
         }
 
-        &:not(:first-child) {
-          border-top: 1px solid #f7f7f7;
+        &:not(:last-child) {
+          border-bottom: 1px solid #f7f7f7;
         }
       }
     }
