--- a/src/assets/styles/models.scss
+++ b/src/assets/styles/models.scss
@@ -46,6 +46,8 @@ html {
           &.flex {
             display:flex;
             flex-wrap:wrap;
+            align-items:center;
+            
             .content, .image {
               flex:0 0 50%;
               
