Update filter font size

--- a/src/assets/styles/cv.scss
+++ b/src/assets/styles/cv.scss
@@ -2,9 +2,10 @@ html {
 
   body {
     .hero {
-      background-image: url(/static/personal-hero-super-res.png);
+      // background-image: url(/static/personal-hero-super-res.png);
+      background-image: url(/static/mystic-gate-bg.png);
       background-position: top center;
-      filter:grayscale(1);
+      // filter:grayscale(1);
     }
 
     // .intro {
